--- a/01 Foundations/4.6 Links and Images.md
+++ b/01 Foundations/4.6 Links and Images.md
@@ -2,7 +2,7 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Wednesday, 2022-02-02
+refined: Monday, 2022-05-30
 ---
 
 # [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/links-and-images#knowledge-check)
@@ -24,8 +24,4 @@ refined: Wednesday, 2022-02-02
 5. `<img>element.png</img>`
 6. The `src`(specifies image location) and `alt`(img description, useful for screen readers) attributes.
 7. `<img src="../images/element.png">`
-8. `.jpg .png .svg .gif`
-
-# References
-
-1. [Links and Images Tutorial | HTML & CSS Is Hard](https://www.internetingishard.com/html-and-css/links-and-images/)
+8. `.jpg`, `.png`, `.svg`, `.gif`
