--- a/01 Foundations/6.1 Variables, Operators, and Numbers.md
+++ b/01 Foundations/6.1 Variables, Operators, and Numbers.md
@@ -1,8 +1,8 @@
 ---
-aliases:
-tags:, js
+aliases: 
+tags: 
 crafted: Tuesday, 2022-01-04
-refined: Tuesday, 2022-03-01
+refined: Saturday, 2022-06-25
 ---
 
 # [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-1#knowledge-check)
@@ -24,10 +24,8 @@ refined: Tuesday, 2022-03-01
 1. `let`, `const`, and `var`.
 2. `var`, as it has unpredictable behavior.
 3. - Names contain only letters, digits, or the symbols `$` and `_`.
-
-- First char. cannot be a digit.
-- Bonus: Remember they’re case-sensitive.
-
+	- First char. cannot be a digit.
+	- Bonus: Remember they’re case-sensitive.
 4. When `+` applied to strings, it concatenates them. When it’s applied to both str and num, the concatenation takes place when it’s compiled, with LTR priority.
    `alert(2 + 2 + '1' ); // "41" and not "221"`
 5. It outputs the remainder of an operation.
@@ -43,10 +41,6 @@ refined: Tuesday, 2022-03-01
 
 ## [Variables Assignment](https://javascript.info/variables)
 
-1. `let admin, name; name = "John"; admin = name; alert(admin);`
-
-2. `let ourPlanet = 'Earth'; let currentVisitor = 'Jerry';`
-
 3. Uppercase for `birthday` but not `age`, as age isn’t a hard-coded value, but instead calculated on runtime.
 
 ## [Operators Assignment](https://javascript.info/operators)
@@ -57,59 +51,19 @@ refined: Tuesday, 2022-03-01
    `d`=1
 2. `a`=4
    `x`=5
-3. Solution
-   1. 10, as `""` converts numbers into string.
+3. 1. 10, as `""` converts numbers into string.
    2. -1, as `-` only works with numbers, so `"-1"` converted to numbers.
    3. -95
    4. -14
    5. 1, as `null` is +0.
    6. `NaN`, as `undefined` = `NaN`, and anything + `NaN` = `NaN`.
    7. -2. `\t`, `\n` are whitespace chars, so it’s an empty string, where converted to number = `0`.
-4. Convert strings to numbers by prepending them with unary `+`.
-
-```js
-let a = +prompt("First number?", 3);
-let b = +prompt("Second number?", 2);
-alert(a + b); // 12
-```
+4. [Operators Task 4](https://codepen.io/raineedust/pen/dydxKJr)
 
 ## TOP Assignment
 
-```js
-1;
-
-console.log(23 + 97);
-
-2;
-
-console.log(2 + 4 + 6 + 8 + 10 + 12);
-
-3;
-
-let sol = (4 + 6 + 9) / 77;
-let solRound = sol.toFixed(5);
-console.log(solRound);
-
-4;
-
-let a = 10;
-console.log(a);
-console.log(9 * a);
-let b = 7 * a;
-console.log(b);
-
-5;
-
-const max = 57;
-let actual = max - 13;
-let percentage = actual / max;
-```
-
-# Notes
-
-- JavaScript uses the `+` operator for both addition and concatenation. This results in deviation of behavior compared to other operators, e.g. `-` or `*`, as they will always try to convert strings to numbers when it contains numeric operations.``
-
-# References
-
-1. [Variables](http://javascript.info/variables)
-2. [Basic operators, maths](http://javascript.info/operators)
+1. [TOP Practice 1](https://codepen.io/raineedust/pen/bGLXKve)
+2. [TOP Practice 2](https://codepen.io/raineedust/pen/QWQexmd)
+3. [TOP Practice 3](https://codepen.io/raineedust/pen/yLvmEKo)
+4. [TOP Practice 4](https://codepen.io/raineedust/pen/rNJXKdJ)
+5. [TOP Practice 5](https://codepen.io/raineedust/pen/xxYvzWa)
