--- a/01 Foundations/6.11 DOM Manipulation and Events.md
+++ b/01 Foundations/6.11 DOM Manipulation and Events.md
@@ -2,7 +2,7 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Monday, 2022-05-30
+refined: Saturday, 2022-06-25
 ---
 
 # [Knowledge Check](https://www.theodinproject.com/lessons/foundations-dom-manipulation-and-events#knowledge-check)
@@ -43,6 +43,6 @@ refined: Monday, 2022-05-30
 15. It references all the matches of the selectors.
 16. Capture means a function is run each time going all the way down a nested element. Bubbling is the opposite, as the function runs while going up.
 
-# Exercise
+## Exercise
 
-[6.11 DOM Manipulation and Events Exercise](https://codepen.io/raineedust/pen/zYRwmOj)
+1. [6.11 DOM Manipulation and Events Exercise](https://codepen.io/raineedust/pen/zYRwmOj)
