--- a/01 Foundations/6.2 Data Types, Strings, and Conditionals.md
+++ b/01 Foundations/6.2 Data Types, Strings, and Conditionals.md
@@ -2,7 +2,7 @@
 aliases: 
 tags: 
 crafted: Tuesday, 2022-01-04
-refined: Monday, 2022-05-30
+refined: Saturday, 2022-06-25
 ---
 
 # [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-2#knowledge-check)
@@ -49,18 +49,18 @@ refined: Monday, 2022-05-30
 12. Greater/less than, Greater/less than or equals, equals, not equals
 13. Truthy values become `true`, falsy values, such as false, 0 , -0 , 0n , "" , null , undefined , and NaN are `false`
 14. They allow the code to perform different actions based on different conditions.
-15. ![](https://i.imgur.com/AVfiL3m.png)
-16. ![](https://i.imgur.com/F2Qm7Do.png)
+15. ![](https://i.imgur.com/iflhMWC.png)
+16. ![](https://i.imgur.com/st70QbF.png)
 17. `( condition ) ? run this code : run this code instead`
 18. Putting statements inside another one.
 
 ## [Data Types Assignment](http://javascript.info/types)
 
-1. hello 1 // hello name // hello Ilya
+1. hello 1, hello name, hello Ilya
 
 ## [Comparisons Assignment](http://javascript.info/comparison#tasks)
 
-1. true // true // false // true // false // false // false
+1. true, false, true, true, false, false, false
 
 ## [Logical Operators Assignment](https://javascript.info/logical-operators#tasks)
 
@@ -79,12 +79,8 @@ refined: Monday, 2022-05-30
 
 ## [Conditional Branching: If, '?' Assignment](https://javascript.info/ifelse#tasks)
 
-1. No, value is falsy.
+1. Yes, it will.
 2. [Conditionals Task 2](https://codepen.io/raineedust/pen/RwjNOpP)
 3. [Conditionals Task 3](https://codepen.io/raineedust/pen/VwrYNdL)
-4. `let result = (a + b < 4) ? "Below" : "Over";`
+4. [Conditionals Task 4](https://codepen.io/raineedust/pen/xxYvzaQ)
 5. [Conditionals Task 5](https://codepen.io/raineedust/pen/ZEaYZPV)
-
-# References
-
-1.
