--- a/01 Foundations/6.5 Problem Solving.md
+++ b/01 Foundations/6.5 Problem Solving.md
@@ -2,7 +2,7 @@
 aliases:
 tags:
 crafted: Monday 2022-02-07
-refined: Monday, 2022-02-07
+refined: Saturday, 2022-06-25
 ---
 
 # [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/problem-solving#knowledge-check)
@@ -15,32 +15,15 @@ refined: Monday, 2022-02-07
 - [What is pseudocode?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/problem-solving#pseudo)
 - [What are the advantages of breaking a problem down and solving the smaller problems?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/problem-solving#breaking-problem)
 
-1. 3 stages of problem solving:
-   1. Understand the problem.
+1. 1. Understand the problem.
    2. Plan out a way to solve by asking questions.
    3. Develop a solution by breaking a problem down to subtasks and writing pseudocode. Do THIS before programming your algorithm!
 2. Time may be wasted on trying to untangle a problem little by little, hindering the solution development process.
 3. Write down a problem in natural language. Use tools such as diagrams if it helps.
-4. Ask questions like:
-   1. How can users interface with the program? Feel free to develop a mockup.
+4. 1. How can users interface with the program? Feel free to develop a mockup.
    2. What inputs does the program retrieve? Where does it retrieve them from?
    3. What are the outputs?
    4. When given inputs, what are the steps needed to return the desired outputs?
 5. A recipe for solving a problem.
 6. A description of the steps of solving a problem using natural language.
 7. Breaking down a problem into pieces reduces the complexity to be aware of at once, making it easier to understand and solve.
-
-## Example of Pseudocode
-
-Excerpt retrieved from [What is Pseudo-coding? | Viking Code School](https://www.vikingcodeschool.com/software-engineering-basics/what-is-pseudo-coding):
-
-```bash
-WHEN the user inputs money: IF the bill is too crumpled to read, provide an error message, and return the bill. ELSE, Add it to the balance
-WHEN the user selects an item: IF they haven't put in enough money, ask for more. IF the item is out of stock, ask them to make a new selection. ELSE, determine change, dispense change, zero out the balance, and dispense the item.
-WHEN the user hits the "cancel" button: IF the user has input money without making a purchase, return the money,
-        and zero out the balance
-```
-
-# References
-
-1.
