--- a/01 Foundations/6.6 Understanding Errors.md
+++ b/01 Foundations/6.6 Understanding Errors.md
@@ -2,7 +2,7 @@
 aliases:
 tags:
 crafted: Monday 2022-02-07
-refined: Friday, 2022-02-11
+refined: Monday, 2022-05-30
 ---
 
 # [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/understanding-errors#knowledge-check)
@@ -11,12 +11,7 @@ refined: Friday, 2022-02-11
 - [What is the key difference between an error and a warning?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/understanding-errors#errors-vs-warnings)
 - [What is one method you can use to resolve an error?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/understanding-errors#tips-for-resolving-errors)
 
-1. A `TypeError` may be thrown when:
-   1. an operand or argument passed to a function is incompatible with the type expected by that operator or function;
+1. 1. an operand or argument passed to a function is incompatible with the type expected by that operator or function;
    2. or when attempting to modify a value that cannot be changed;
    3. or when attempting to use a value in an inappropriate way.
 2. Errors pause the execution of programs, while warnings are not necessarily code-breaking but should ideally be addressed early.
-
-# References
-
-1.
