--- a/01 Foundations/1.6 How Does the Web Work.md
+++ b/01 Foundations/1.6 How Does the Web Work.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Thursday, 2022-06-02
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/how-does-the-web-work#knowledge-check)
+# 1.6 How Does the Web Work
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/how-does-the-web-work#knowledge-check)
 
 - [What is a network?](https://developer.mozilla.org/en-US/docs/Learn/Common_questions/How_does_the_Internet_work)
 - [What is the internet?](https://www.youtube.com/watch?v=7_LPdttKXPc&t=46s)
