--- a/01 Foundations/2.4 Command Line Basics.md
+++ b/01 Foundations/2.4 Command Line Basics.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Monday, 2022-05-30
+refined: Thursday, 2022-06-02
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/command-line-basics-web-development-101#knowledge-check)
+# 2.4 Command Line Basics
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/command-line-basics-web-development-101#knowledge-check)
 
 - What is the command line?
 - How do you open the command line on your computer?
