--- a/01 Foundations/3.1 Introduction to Git.md
+++ b/01 Foundations/3.1 Introduction to Git.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Monday, 2022-05-30
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-git#knowledge-check)
+# 3.1 Introduction to Git
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-git#knowledge-check)
 
 - [What kind of program is Git?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-git#introduction)
 - [What are the differences between Git and a text editor in terms of what they save and their record keeping?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-git#text-editor-and-git)
