--- a/01 Foundations/4.1 Introduction to HTML and CSS.md
+++ b/01 Foundations/4.1 Introduction to HTML and CSS.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Wednesday, 2022-02-02
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-html-and-css#knowledge-check)
+# 4.1 Introduction to HTML and CSS
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-html-and-css#knowledge-check)
 
 - [What do HTML and CSS stand for?](https://brytdesigns.com/html-css-javascript-whats-the-difference/#What_is_HTML)
 - [Between HTML and CSS, which would you use for putting paragraphs of text on a webpage?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-html-and-css#html-and-css)
