--- a/01 Foundations/4.2 Elements and Tags.md
+++ b/01 Foundations/4.2 Elements and Tags.md
@@ -5,7 +5,7 @@ crafted: Saturday, 2022-01-01
 refined: Wednesday, 2022-02-02
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/elements-and-tags#knowledge-check)
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/elements-and-tags#knowledge-check)
 
 - [What is an HTML tag?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/elements-and-tags#elements-and-tags)
 - [What are the three parts of an HTML element?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/elements-and-tags#elements-and-tags)
