--- a/01 Foundations/4.3 HTML Boilerplate.md
+++ b/01 Foundations/4.3 HTML Boilerplate.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Wednesday, 2022-02-02
+refined: Monday, 2022-05-30
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/html-boilerplate#knowledge-check)
+# 4.3 HTML Boilerplate
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/html-boilerplate#knowledge-check)
 
 - [What is the purpose of the doctype declaration?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/html-boilerplate#the-doctype)
 - [What is the HTML element?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/html-boilerplate#html-element)
