--- a/01 Foundations/4.4 Working with Text.md
+++ b/01 Foundations/4.4 Working with Text.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Wednesday, 2022-02-02
+refined: Monday, 2022-05-30
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/working-with-text#knowledge-check)
+# 4.4 Working with Text
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/working-with-text#knowledge-check)
 
 - [How do you create a paragraph in HTML?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/working-with-text#create-paragraph-element)
 - [How do you create a heading in HTML?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/working-with-text#headings)
