--- a/01 Foundations/4.5 Lists.md
+++ b/01 Foundations/4.5 Lists.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Wednesday, 2022-02-02
+refined: Monday, 2022-05-30
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/lists#knowledge-check)
+# 4.5 Lists
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/lists#knowledge-check)
 
 - [What HTML tag is used to create an unordered list?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/lists#unordered-lists)
 - [What HTML tag is used to create an ordered list?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/lists#ordered-lists)
