--- a/01 Foundations/4.6 Links and Images.md
+++ b/01 Foundations/4.6 Links and Images.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Monday, 2022-05-30
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/links-and-images#knowledge-check)
+# 4.6 Links and Images
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/links-and-images#knowledge-check)
 
 - [What element is used to create a link?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/links-and-images#anchor-elements)
 - [What is an attribute?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/links-and-images#attribute)
