--- a/01 Foundations/5.1 CSS Foundations.md
+++ b/01 Foundations/5.1 CSS Foundations.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Sunday, 2022-05-29
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/css-foundations#knowledge-check)
+# 5.1 CSS Foundations
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/css-foundations#knowledge-check)
 
 - [What are the main differences between external, internal, and inline CSS?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/css-foundations#external-css)
 - [What is the syntax for class and ID selectors?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/css-foundations#class-selectors)
