--- a/01 Foundations/5.3 The Box Model.md
+++ b/01 Foundations/5.3 The Box Model.md
@@ -1,11 +1,13 @@
 ---
 aliases:
-tags: 
+tags:
 crafted: Saturday, 2022-01-01
-refined: Friday, 2022-06-24
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/the-box-model#knowledge-check)
+# 5.3 The Box Model
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/the-box-model#knowledge-check)
 
 - [From inside to outside, what is the order of box-model properties?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/the-box-model#the-box-model)
 - [What does the `box-sizing` CSS property do?](https://developer.mozilla.org/en-US/docs/Learn/CSS/Building_blocks/The_box_model#the_alternative_css_box_model)
