--- a/01 Foundations/5.4 Block and Inline.md
+++ b/01 Foundations/5.4 Block and Inline.md
@@ -1,11 +1,11 @@
 ---
-aliases: 
-tags: 
+aliases:
+tags:
 crafted: Saturday, 2022-01-01
 refined: Friday, 2022-06-24
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/block-and-inline#knowledge-check)
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/block-and-inline#knowledge-check)
 
 - [What is the difference between a block element and an inline element?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/block-and-inline#block-inline-difference)
 - [What is the difference between an inline element and an inline-block element?](https://www.digitalocean.com/community/tutorials/css-display-inline-vs-inline-block)
