--- a/01 Foundations/5.5 Introduction to Flexbox.md
+++ b/01 Foundations/5.5 Introduction to Flexbox.md
@@ -1,11 +1,13 @@
 ---
-aliases: 
-tags: 
+aliases:
+tags:
 crafted: Saturday, 2022-01-01
-refined: Friday, 2022-06-24
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-flexbox#knowledge-check)
+# 5.5 Introduction to Flexbox
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-flexbox#knowledge-check)
 
 - [What’s the difference between a flex container and a flex item?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-flexbox#flex-container-item-knowledge-check)
 - [How do you create a flex item?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/introduction-to-flexbox#how-to-create-flex-item-knowledge-check)
