--- a/01 Foundations/5.7 Axes.md
+++ b/01 Foundations/5.7 Axes.md
@@ -1,11 +1,13 @@
 ---
 aliases:
-tags: 
+tags:
 crafted: Saturday, 2022-01-01
-refined: Monday, 2022-05-30
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/axes#knowledge-check)
+# 5.7 Axes
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/axes#knowledge-check)
 
 - [How do you make flex items arrange themselves vertically instead of horizontally?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/axes#flex-vertical)
 - [In a `column` flex-container, what does `flex-basis` refer to?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/axes#column-flex-basis)
