--- a/01 Foundations/6.1 Variables, Operators, and Numbers.md
+++ b/01 Foundations/6.1 Variables, Operators, and Numbers.md
@@ -1,11 +1,13 @@
 ---
-aliases: 
-tags: 
+aliases:
+tags:
 crafted: Tuesday, 2022-01-04
 refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-1#knowledge-check)
+# 6.1 Variables, Operators, and Numbers
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-1#knowledge-check)
 
 - [Name the three ways to declare a variable?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-1#variable-declaration)
 - [Which of the three variable declarations should you avoid and why?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-1#avoid-var)
@@ -24,8 +26,8 @@ refined: Saturday, 2022-06-25
 1. `let`, `const`, and `var`.
 2. `var`, as it has unpredictable behavior.
 3. - Names contain only letters, digits, or the symbols `$` and `_`.
-	- First char. cannot be a digit.
-	- Bonus: Remember they’re case-sensitive.
+   - First char. cannot be a digit.
+   - Bonus: Remember they’re case-sensitive.
 4. When `+` applied to strings, it concatenates them. When it’s applied to both str and num, the concatenation takes place when it’s compiled, with LTR priority.
    `alert(2 + 2 + '1' ); // "41" and not "221"`
 5. It outputs the remainder of an operation.
