--- a/01 Foundations/6.10 Arrays and Loops.md
+++ b/01 Foundations/6.10 Arrays and Loops.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Sunday, 2022-05-29
+refined: Monday, 2022-05-30
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-4#knowledge-check)
+# 6.10 Arrays and Loops
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-4#knowledge-check)
 
 - [What is an array?](https://www.w3schools.com/js/js_arrays.asp)
 - [What are arrays useful for?](https://www.w3schools.com/js/js_arrays.asp)
