--- a/01 Foundations/6.11 DOM Manipulation and Events.md
+++ b/01 Foundations/6.11 DOM Manipulation and Events.md
@@ -5,7 +5,9 @@ crafted: Sunday, 2022-05-29
 refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/lessons/foundations-dom-manipulation-and-events#knowledge-check)
+# 6.11 DOM Manipulation and Events
+
+## [Knowledge Check](https://www.theodinproject.com/lessons/foundations-dom-manipulation-and-events#knowledge-check)
 
 - [What is the DOM?](https://www.theodinproject.com/lessons/foundations-dom-manipulation-and-events#dom---document-object-model)
 - [How do you target the nodes you want to work with?](https://www.theodinproject.com/lessons/foundations-dom-manipulation-and-events#targeting-nodes-with-selectors)
