--- a/01 Foundations/6.14 Objects and Arrays.md
+++ b/01 Foundations/6.14 Objects and Arrays.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Sunday, 2022-05-29
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-5#knowledge-check)
+# 6.14 Objects and Arrays
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-5#knowledge-check)
 
 - [What is the difference between objects and arrays?](https://javascript.info/object#summary)
 - [How do you access object properties?](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Objects/Basics#bracket_notation)
