--- a/01 Foundations/6.2 Data Types, Strings, and Conditionals.md
+++ b/01 Foundations/6.2 Data Types, Strings, and Conditionals.md
@@ -1,11 +1,13 @@
 ---
-aliases: 
-tags: 
+aliases:
+tags:
 crafted: Tuesday, 2022-01-04
 refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-2#knowledge-check)
+# 6.2 Data Types, Strings, and Conditionals
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-2#knowledge-check)
 
 - [What are the eight data types in JavaScript?](https://javascript.info/types#summary)
 - [Which data type is NOT primitive?](https://javascript.info/types#objects-and-symbols)
@@ -45,13 +47,30 @@ refined: Saturday, 2022-06-25
 8. `\`
 9. Methods are predefined ways to work with strings.
 10. `substring()` doesn’t accept negative indexes, `slice()` does. `substr()` treats the first parameter as string position, but second parameter as length.
-11. `||` OR, `&&` AND, `!` NOT
+11. `||`=OR, `&&`=AND, `!`=NOT
 12. Greater/less than, Greater/less than or equals, equals, not equals
 13. Truthy values become `true`, falsy values, such as false, 0 , -0 , 0n , "" , null , undefined , and NaN are `false`
 14. They allow the code to perform different actions based on different conditions.
-15. ![](https://i.imgur.com/iflhMWC.png)
-16. ![](https://i.imgur.com/st70QbF.png)
-17. `( condition ) ? run this code : run this code instead`
+15. Syntax:
+	```js
+	if(condition) {
+		// code block
+	}
+	```
+16. Syntax:
+	```js
+	switch(expression) {
+	  case x:
+	    // code block
+	    break;
+	  case y:
+	    // code block
+	    break;
+	  default:
+	    // code block
+	}
+	```
+17. `variable = (condition) ? expressionTrue :  expressionFalse;`
 18. Putting statements inside another one.
 
 ## [Data Types Assignment](http://javascript.info/types)
