--- a/01 Foundations/6.3 JavaScript Developer Tools.md
+++ b/01 Foundations/6.3 JavaScript Developer Tools.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Tuesday, 2022-01-04
-refined: Monday, 2022-05-30
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/javascript-developer-tools#knowledge-check)
+# 6.3 JavaScript Developer Tools
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/javascript-developer-tools#knowledge-check)
 
 - [How do you open developer tools?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/javascript-developer-tools#opening-dev-tools)
 - [How do you change screen size of a website using developer tools?](https://developer.chrome.com/docs/devtools/device-mode/)
