--- a/01 Foundations/6.5 Problem Solving.md
+++ b/01 Foundations/6.5 Problem Solving.md
@@ -5,7 +5,9 @@ crafted: Monday 2022-02-07
 refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/problem-solving#knowledge-check)
+# 6.5 Problem Solving
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/problem-solving#knowledge-check)
 
 - [What are the three stages in the problem solving process?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/problem-solving#problem-solving-stages)
 - [Why is it important to clearly understand the problem first?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/problem-solving#important-understand-problem)
