--- a/01 Foundations/6.8 Clean Code.md
+++ b/01 Foundations/6.8 Clean Code.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Sunday, 2022-05-29
+refined: Monday, 2022-05-30
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/clean-code#knowledge-check)
+# 6.8 Clean Code
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/clean-code#knowledge-check)
 
 - [Why is it important to write clean code?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/clean-code#writing-clean-code)
 - [Name 5 clean code principles previously mentioned](https://onextrapixel.com/10-principles-for-keeping-your-programming-code-clean/)
