--- a/02 Intermediate HTML and CSS/2.8 Custom Properties.md
+++ b/02 Intermediate HTML and CSS/2.8 Custom Properties.md
@@ -14,7 +14,7 @@ refined: Friday, 2022-06-24
 - [Where would you declare a custom property to have its scope be global and accessible by all other selectors?](https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-custom-properties#scope)
 - [Where would you declare a custom property so that a user’s theme setting from their OS or browser was taken into account?](https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-custom-properties#creating-themes-with-custom-properties)
 
-1. `--text-color`
-2. `background-color`
+1. `--text-color`.
+2. `background-color`.
 3. Put the property in the `:root` selector.
-4. Using the `prefers-color-scheme` media query inside `@media() {}`
+4. Using the `prefers-color-scheme` media query.
