--- a/01 Foundations/1.4 Asking For Help.md
+++ b/01 Foundations/1.4 Asking For Help.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Thursday, 2022-06-02
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/asking-for-help#knowledge-check)
+# 1.4 Asking For Help
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/asking-for-help#knowledge-check)
 
 - [Name at least one thing your question should always include.](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/asking-for-help#provide-code-knowledge-check)
 - [Describe the “XY Problem”.](https://xyproblem.info/)
