--- a/01 Foundations/3.2 Git Basics.md
+++ b/01 Foundations/3.2 Git Basics.md
@@ -1,11 +1,13 @@
 ---
-aliases: 
-tags: 
+aliases:
+tags:
 crafted: Saturday, 2022-01-01
-refined: Friday, 2022-06-24
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/git-basics#knowledge-check)
+# 3.2 Git Basics
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/git-basics#knowledge-check)
 
 - [How do you create a new repository on GitHub?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/git-basics#new-github-repo)
 - [How do you copy a repository onto your local machine from GitHub?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/git-basics#github-to-local)
