--- a/01 Foundations/5.2 Inspecting HTML and CSS.md
+++ b/01 Foundations/5.2 Inspecting HTML and CSS.md
@@ -1,11 +1,13 @@
 ---
-aliases: 
-tags: 
+aliases:
+tags:
 crafted: Saturday, 2022-01-01
-refined: Friday, 2022-06-24
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/inspecting-html-and-css#knowledge-check)
+# 5.2 Inspecting HTML and CSS
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/inspecting-html-and-css#knowledge-check)
 
 - [How do you select a specific element on your page with your browser’s developer tools?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/inspecting-html-and-css#inspecting-elements)
 - [What does a strikethrough in a CSS element mean in your browser’s developer tools?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/inspecting-html-and-css#strikethrough)
