--- a/01 Foundations/5.6 Growing and Shrinking.md
+++ b/01 Foundations/5.6 Growing and Shrinking.md
@@ -1,11 +1,13 @@
 ---
-aliases: 
-tags: 
+aliases:
+tags:
 crafted: Saturday, 2022-01-01
 refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/growing-and-shrinking#knowledge-check)
+# 5.6 Growing and Shrinking
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/growing-and-shrinking#knowledge-check)
 
 This section contains questions for you to check your understanding of this lesson. If you’re having trouble answering the questions below on your own, review the material above to find the answer.
 
@@ -14,11 +16,3 @@ This section contains questions for you to check your understanding of this less
 1. - `flex-grow`, the growth factor of a `div`
    - `flex-shrink`, the shrink factor of a `div`
    - `flex-basis`, the initial size of a `div`
-
-# Notes
-
-- The default value for `flex` shorthand is `0 1 auto`
-- The default value for `flex: 1` shorthand is `1 1 0`
-- The default value for `flex: initial` shorthand is `0 1 auto`
-- The default value for `flex: auto` shorthand is `1 1 auto`
-- The default value for `flex: none` shorthand is `0 0 auto`
