--- a/01 Foundations/5.8 Alignment.md
+++ b/01 Foundations/5.8 Alignment.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Monday, 2022-05-30
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/alignment#knowledge-check)
+# 5.8 Alignment
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/alignment#knowledge-check)
 
 - [What is the difference between `justify-content` and `align-items`?](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Aligning_Items_in_a_Flex_Container)
 - [How do you use flexbox to completely center a div inside a flex container?](https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Aligning_Items_in_a_Flex_Container)
@@ -13,17 +15,10 @@ refined: Monday, 2022-05-30
 
 1. Declaration `justify-content` deals with the main axis, while `align-items` deals with the [cross axis](https://developer.mozilla.org/en-US/docs/Glossary/Cross_Axis), which is perpendicular to the main.
 2. Using the following declarations to position items on the main axis as well as cross axis:
-
-```css
-.box {
-  align-items: center;
-  justify-content: center;
-}
-```
-
+	```css
+	.box {
+	  align-items: center;
+	  justify-content: center;
+	}
+	```
 3. `space-between` spaces everything in between evenly, while `space-around` spaces everything evenly with equal spaces around the first and final block.
-
-# Notes
-
-- The `flex-flow` shorthand combines `flex-direction` and `flex-wrap`.
-- `justify-content` and `align-items` declarations:
