--- a/01 Foundations/6.17 Introduction to Frameworks.md
+++ b/01 Foundations/6.17 Introduction to Frameworks.md
@@ -2,10 +2,12 @@
 aliases: 
 tags: 
 crafted: Sunday, 2022-06-19
-refined: Sunday, 2022-06-19
+refined: Saturday, 2022-06-25
 ---
 
-# Knowledge Check
+# 6.17 Introduction to Frameworks
+
+## Knowledge Check
 
 - [What problems do frameworks solve?](https://developer.mozilla.org/en-US/docs/Learn/Server-side/First_steps/Web_frameworks#what_can_a_web_framework_do_for_you)
 - [Name some popular front-end and back-end frameworks.](https://dev.to/aspittel/what-is-a-web-framework-and-why-should-i-use-one-38c0)
