--- a/01 Foundations/6.4 Functions.md
+++ b/01 Foundations/6.4 Functions.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Tuesday, 2022-01-04
-refined: Monday, 2022-05-30
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-3#knowledge-check)
+# 6.4 Functions
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/fundamentals-part-3#knowledge-check)
 
 - [What are functions useful for?](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/Functions)
 - [How do you invoke a function?](https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/Functions#invoking_functions)
