--- a/01 Foundations/6.6 Understanding Errors.md
+++ b/01 Foundations/6.6 Understanding Errors.md
@@ -2,10 +2,12 @@
 aliases:
 tags:
 crafted: Monday 2022-02-07
-refined: Monday, 2022-05-30
+refined: Saturday, 2022-06-25
 ---
 
-# [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/understanding-errors#knowledge-check)
+# 6.6 Understanding Errors
+
+## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/understanding-errors#knowledge-check)
 
 - [What are three reasons why you may see a TypeError?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/understanding-errors#type-error)
 - [What is the key difference between an error and a warning?](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/understanding-errors#errors-vs-warnings)
