--- a/02 Intermediate HTML and CSS/2.1 Default Styles.md
+++ b/02 Intermediate HTML and CSS/2.1 Default Styles.md
@@ -1,5 +1,14 @@
+---
+aliases: 
+tags: 
+crafted: Thursday, 2022-06-23
+refined: Thursday, 2022-06-23
+---
+
+# 2.1 Default Styles
+
 ## Knowledge Check
 
--   [Why would you want to use a CSS reset?](https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-default-styles#default-styles)
+- [Why would you want to use a CSS reset?](https://www.theodinproject.com/lessons/node-path-intermediate-html-and-css-default-styles#default-styles)
 
 1. To remove browser-specific styling defaults, so that every element behaves the same in every browser.
