--- a/01 Foundations/7.8 Clean Code.md
+++ b/01 Foundations/7.8 Clean Code.md
@@ -2,10 +2,10 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Monday, 2022-05-30
+refined: Saturday, 2022-06-25
 ---
 
-# 6.8 Clean Code
+# 7.8 Clean Code
 
 ## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/clean-code#knowledge-check)
 
@@ -14,8 +14,7 @@ refined: Monday, 2022-05-30
 - [What is the difference between good comments and bad comments?](https://onextrapixel.com/10-principles-for-keeping-your-programming-code-clean/)
 
 1. There are a variety of characteristics to “clean code” due to its vague description. But to name a few, clean code helps make it easier to maintain, understand, scale, and test the code.
-2. 5 clean code principles
-   - Develop logic with flowcharts or pseudocode before coding
+2. - Develop logic with flowcharts or pseudocode before coding
    - Write good comments, e.g. author
    - Use naming standards
    - Develop good code structure with proper indentation and self-describing names
