--- a/01 Foundations/5.4 Block and Inline.md
+++ b/01 Foundations/5.4 Block and Inline.md
@@ -2,8 +2,10 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Friday, 2022-06-24
+refined: Saturday, 2022-06-25
 ---
+
+# 5.4 Block and Inline
 
 ## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/block-and-inline#knowledge-check)
 
