--- a/01 Foundations/5.1 CSS Foundations.md
+++ b/01 Foundations/5.1 CSS Foundations.md
@@ -2,7 +2,7 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Saturday, 2022-06-25
+refined: Monday, 2022-06-27
 ---
 
 # 5.1 CSS Foundations
@@ -25,3 +25,7 @@ refined: Saturday, 2022-06-25
 4. Chaining selectors
 5. It will cause elements that match the last (as in the last one, LTR) selector to be selected if they also have an ancestor that matches the previous selector.
 6. Class selectors have higher specificity than type selectors.
+
+## CSS Exercises
+
+Work done can be found here: [css-exercises/foundations](https://github.com/raineedust/css-exercises/tree/main/foundations).
