--- a/01 Foundations/5.4 Block and Inline.md
+++ b/01 Foundations/5.4 Block and Inline.md
@@ -23,3 +23,7 @@ refined: Saturday, 2022-06-25
 4. Inline
 5. Block
 6. Inline
+
+## CSS Exercises
+
+Work done can be found here: [css-exercises/margin-and-padding](https://github.com/raineedust/css-exercises/tree/main/margin-and-padding).
