--- a/01 Foundations/6.4 Alignment.md
+++ b/01 Foundations/6.4 Alignment.md
@@ -2,7 +2,7 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Saturday, 2022-06-25
+refined: Monday, 2022-06-27
 ---
 
 # 6.4 Alignment
@@ -22,3 +22,9 @@ refined: Saturday, 2022-06-25
 	}
 	```
 3. `space-between` spaces everything in between evenly, while `space-around` spaces everything evenly with equal spaces around the first and final block.
+
+## CSS Exercises
+
+Work done can be found here: [css-exercises/flex](https://github.com/raineedust/css-exercises/tree/main/flex).
+
+## [Flexbox Froggy](https://flexboxfroggy.com/)
