--- a/01 Foundations/7.11 DOM Manipulation and Events.md
+++ b/01 Foundations/7.11 DOM Manipulation and Events.md
@@ -2,7 +2,7 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Saturday, 2022-06-25
+refined: Monday, 2022-06-27
 ---
 
 # 7.11 DOM Manipulation and Events
@@ -45,6 +45,10 @@ refined: Saturday, 2022-06-25
 15. It references all the matches of the selectors.
 16. Capture means a function is run each time going all the way down a nested element. Bubbling is the opposite, as the function runs while going up.
 
-## Exercise
+## TOP Assignments
 
-1. [6.11 DOM Manipulation and Events Exercise](https://codepen.io/raineedust/pen/zYRwmOj)
+- [6.11 DOM Manipulation and Events Exercise](https://codepen.io/raineedust/pen/zYRwmOj)
+
+## JavaScript30 Assignments
+
+Work done can be found here: [raineedust/JavaScript30](https://github.com/raineedust/JavaScript30).
