--- a/01 Foundations/7.14 Objects and Arrays.md
+++ b/01 Foundations/7.14 Objects and Arrays.md
@@ -2,7 +2,7 @@
 aliases:
 tags:
 crafted: Sunday, 2022-05-29
-refined: Saturday, 2022-06-25
+refined: Monday, 2022-06-27
 ---
 
 # 7.14 Objects and Arrays
@@ -18,3 +18,7 @@ refined: Saturday, 2022-06-25
 2. Use dot or bracket notation.
 3. `.map` transform an array.
 4. `.reduce` provides a single output value based on what’s given in an array.
+
+## JavaScript30 Assignments
+
+Work done can be found here: [raineedust/JavaScript30](https://github.com/raineedust/JavaScript30).
