--- a/01 Foundations/7.2 Data Types, Strings, and Conditionals.md
+++ b/01 Foundations/7.2 Data Types, Strings, and Conditionals.md
@@ -2,7 +2,7 @@
 aliases:
 tags:
 crafted: Tuesday, 2022-01-04
-refined: Saturday, 2022-06-25
+refined: Thursday, 2022-06-30
 ---
 
 # 7.2 Data Types, Strings, and Conditionals
@@ -54,20 +54,20 @@ refined: Saturday, 2022-06-25
 15. Syntax:
 	```js
 	if (condition) {
-	  //  code block
+		// code block
 	}
 	```
 16. Syntax:
 	```js
 	switch(expression) {
 	  case x:
-	    // code block
-	    break;
-	  case y:
-	    // code block
-	    break;
-	  default:
-	    // code block
+			// code block
+			break;
+		case y:
+			// code block
+			break;
+		default:
+			// code block
 	}
 	```
 17. `variable = (condition) ? expressionTrue :  expressionFalse;`
@@ -103,3 +103,10 @@ refined: Saturday, 2022-06-25
 3. [Conditionals Task 3](https://codepen.io/raineedust/pen/VwrYNdL)
 4. [Conditionals Task 4](https://codepen.io/raineedust/pen/xxYvzaQ)
 5. [Conditionals Task 5](https://codepen.io/raineedust/pen/ZEaYZPV)
+
+## TOP Assignment
+
+1. [troubleshooting - Replit](https://replit.com/@raineedust/troubleshooting)
+2. [enter a number - Replit](https://replit.com/@raineedust/enter-a-number)
+3. [lets do some math - Replit](https://replit.com/@raineedust/lets-do-some-math)
+4. [direction-follow - Replit](https://replit.com/@raineedust/direction-follow)
