--- a/01 Foundations/8.2 Introduction to Frameworks.md
+++ b/01 Foundations/8.2 Introduction to Frameworks.md
@@ -7,12 +7,12 @@ refined: Saturday, 2022-06-25
 
 # 8.2 Introduction to Frameworks
 
-## Knowledge Check
+## [Knowledge Check](https://www.theodinproject.com/lessons/foundations-introduction-to-frameworks#knowledge-check)
 
 - [What problems do frameworks solve?](https://developer.mozilla.org/en-US/docs/Learn/Server-side/First_steps/Web_frameworks#what_can_a_web_framework_do_for_you)
 - [Name some popular front-end and back-end frameworks.](https://dev.to/aspittel/what-is-a-web-framework-and-why-should-i-use-one-38c0)
 - [Describe the process of choosing a framework.](https://developer.mozilla.org/en-US/docs/Learn/Server-side/First_steps/Web_frameworks#how_to_select_a_web_framework)
 
-1. They help simplify webdev operations
+1. They help simplify webdev operations.
 2. Vue.js, Angular.js, React, Django, Express, Flask
 3. There are a combination of factors to consider, like ease of learning, documentation quality, performance, features, scalability, etc.
