--- a/01 Foundations/4.2 Elements and Tags.md
+++ b/01 Foundations/4.2 Elements and Tags.md
@@ -2,8 +2,10 @@
 aliases:
 tags:
 crafted: Saturday, 2022-01-01
-refined: Wednesday, 2022-02-02
+refined: Saturday, 2022-06-25
 ---
+
+# 4.2 Elements and Tags
 
 ## [Knowledge Check](https://www.theodinproject.com/paths/foundations/courses/foundations/lessons/elements-and-tags#knowledge-check)
 
