--- a/02 Intermediate HTML and CSS/2.5 Advanced Selectors.md
+++ b/02 Intermediate HTML and CSS/2.5 Advanced Selectors.md
@@ -2,7 +2,7 @@
 aliases: 
 tags: 
 crafted: Thursday, 2022-06-23
-refined: Friday, 2022-06-24
+refined: Monday, 2022-06-27
 ---
 
 # 2.5 Advanced Selectors
@@ -26,3 +26,38 @@ refined: Friday, 2022-06-24
 6. `:hover` and `:active`, respectively.
 7. Use `[attribute="value"]`.
 8. Use `[attribute^="thunder"]`
+
+## [CSS Diner Assignments](https://flukeout.github.io/)
+
+1. `plate`
+2. `bento`
+3. `#fancy`
+4. `plate apple`
+5. `#plate apple`
+6. `.small`
+7. `orange.small`
+8. `bento orange.small`
+9. `bento, plate`
+10. `*`
+11. `plate *`
+12. `plate + apple`
+13. `bento ~ pickle`
+14. `plate > apple`
+15. `orange:first-child`
+16. `plate > :only-child`
+17. `.small:last-child`
+18. `:nth-child(3)`
+19. `bento:nth-last-child(3)`
+20. `apple:first-of-type`
+21. `:nth-of-type(even)`
+22. `:nth-of-type(2n+3)`
+23. `apple:only-of-type`
+24. `.small:last-of-type`
+25. `bento:empty`
+26. `apple:not(.small)`
+27. `[for]`
+28. `plate[for]`
+29. `[for="Vitaly"]`
+30. `[for^="Sa"]`
+31. `[for$="ato"]`
+32. `[for*="obb"]`
