--- a/02 Intermediate HTML and CSS/2.6 Positioning.md
+++ b/02 Intermediate HTML and CSS/2.6 Positioning.md
@@ -16,3 +16,5 @@ refined: Friday, 2022-06-24
 1. Relative positioning is the same as static, in addition to being affected by properties like `top`, `right`, `bottom`, and `left`. Also, it will now appear on top of any static elements. The word really means “relative to itself”, not the way it’s typically meant in English.
 2. When you want to position something at an exact point on the screen, and make it appear non-existent to other elements. Think: images with captions on top, or icons on top of other elements.
 3. Sticky positioning allows elements to behave normally, until the user scroll past it. Then it basically behaves like fixed positioning. Example: [check the ToC of this page](https://www.internetingishard.com/html-and-css/basic-web-pages/).
+[CSS Styling Links](https://www.w3schools.com/css/css_link.asp)
+[The Complete Guide to HTML Forms and Constraint Validation - SitePoint](https://www.sitepoint.com/html-forms-constraint-validation-complete-guide/)
