--- a/03 JavaScript/2.3 Project - Library.md
+++ b/03 JavaScript/2.3 Project - Library.md
@@ -11,4 +11,4 @@ This is a project-building module, and thus do not contain **Knowledge Check**.
 
 ## Project Page
 
-[GitHub - raineedust/library: This is a Library app showcasing the concepts of Prototypes and Inheritance.](https://github.com/raineedust/library)
+[GitHub - raineedust/freya-library: This is Freya's Library, a place where you can manage and store your books.](https://github.com/raineedust/freya-library)
